# Lagrangian-Trajectory-Guided-Generative-Weather-Forecasting-for-engineering-oriented-prediction

./: .gitignore  MODEL_OVERVIEW.md  README.md  ltg-net model.docx  pyproject.toml  requirements.txt  run_ltg_cross_period_benchmark.py  run_ltg_multiseed.py  run_ltg_strict_benchmark.py
configs/: base.yaml  prepare_tracks_miniltg.yaml  stage1_regional.yaml  stage2_redesign.yaml  stage2_redesign_sanity.yaml  stage2_stochastic.yaml  stage2_stochastic_rebalanced.yaml  stage2_stochastic_redesign.yaml  stage2_stochastic_v2.yaml  stage2_stochastic_v2_sanity.yaml  stage3_finetune.yaml  stage3_global.yaml  stage3_mini_align_finetune.yaml  stage3_mini_align_recover.yaml  stage3_mini_align_strict_pde_field_tune.yaml  stage3_mini_align_strict_pde_finetune.yaml  stage3_mini_align_strict_pde_recover.yaml  stage3_mini_align_strict_pde_traj_tune.resolved.yaml  stage3_mini_align_strict_pde_traj_tune.yaml  stage3_recover.yaml  stage3_redesign.yaml  stage3_redesign_sanity.yaml  stage3_strict_pde_finetune.yaml  stage3_strict_pde_recover.yaml  td_waterpump_research.yaml
ltg_net/: cli.py  config.py
miniltgnet/: README.md  cli.py  config.py  data.py  inference.py  losses.py  metrics.py  model.py  trainer.py
scripts/: ablation.py  build_era5_from_manual.py  download_era5.py  download_era5_single_chunked.py  download_era5_single_gee_chunked.py  evaluate.py  export_metrics_summary.py  make_fused_checkpoint.py  prepare_era5.py  run_dualmode_full_suite.bat  run_field_track_fused_strict.bat  run_field_track_strict.bat  run_full_pipeline.ps1  run_ltg_cross_period_benchmark.py  sanity_check.py  (+20 more)
(+59 files in other folders)
